--- a/blog.html
+++ b/blog.html
@@ -22,10 +22,12 @@
   <main class="main">
     <section class="articles">
 
+      <h1 class="visually-hidden">Блог</h1>
+
       <div class="articles__list">
 
 
-            <!-- <a href="article.html?id=945" class="topic" id="111">
+        <!-- <a href="article.html?id=945" class="topic" id="111">
               <img src="./img/blog-1-shoes.webp" alt="Изображение обуви" class="topic__img">
               <div class="topic__wrapper">
 
@@ -300,20 +302,24 @@
   <div class="footer">
     <button class="footer__btn footer__btn-prev">
       <svg width="29" height="19" viewBox="0 0 29 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path class="item-icon item-icon__disabled" d="M28.375 7.95833H6.52958L12.0487 2.42375L9.875 0.25L0.625 9.5L9.875 18.75L12.0487 16.5762L6.52958 11.0417H28.375V7.95833Z" fill="#3670C7"/>
-        </svg>
-        
+        <path class="item-icon item-icon__disabled"
+          d="M28.375 7.95833H6.52958L12.0487 2.42375L9.875 0.25L0.625 9.5L9.875 18.75L12.0487 16.5762L6.52958 11.0417H28.375V7.95833Z"
+          fill="#3670C7" />
+      </svg>
+
     </button>
-    <ol class="footer__page-list">
+    <div class="footer__page-list">
       <a class="item item__active" href="blog.html">1</a>
       <a class="item" href="?page=2">2</a>
       <a class="item" href="?page=3">3</a>
-    </ol>
+    </div>
     <button class="footer__btn footer__btn-next">
       <svg width="29" height="19" viewBox="0 0 29 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path class="item-icon" d="M0.625 7.95833H22.4704L16.9513 2.42375L19.125 0.25L28.375 9.5L19.125 18.75L16.9513 16.5763L22.4704 11.0417H0.625V7.95833Z" fill="#3670C7"/>
-        </svg>
-        
+        <path class="item-icon"
+          d="M0.625 7.95833H22.4704L16.9513 2.42375L19.125 0.25L28.375 9.5L19.125 18.75L16.9513 16.5763L22.4704 11.0417H0.625V7.95833Z"
+          fill="#3670C7" />
+      </svg>
+
     </button>
   </div>
 
