--- a/article.html
+++ b/article.html
@@ -24,57 +24,13 @@
 
       <div class="wrapper">
         <div class="article__wrapper">
-          <ul class="breadcrumb">
-            <li class="breadcrumb__item"><a class="link-to-home" href="#">Главная</a><img
-                src="./style/article-modal/img/breadcrumb-icon.svg" alt="Иконка хлебной крошки" class="breadcrumb-icon">
-            </li>
-            <li class="breadcrumb__item"><a class="link-to-blog" href="#" onclick="window.history.go(-1); return false;">Блог</a><img
-                src="./style/article-modal/img/breadcrumb-icon.svg" alt="Иконка хлебной крошки" class="breadcrumb-icon">
-            </li>
-            <li class="breadcrumb__item"><a class="link-to-article" href="article.html"></a></li>
-          </ul>
-
-          <div class="article__text-wrapper">
-            <h2 class="article__title"></h2>
-            <p class="article__paragraf">
-            </p>
-          </div>
 
           <div class="article__footer">
-
-            <a class="article__btn-back" href="#" onclick="window.history.go(-1); return false;">
-              <img class="article__btn-back-icon" src="./style/article-modal/img/to-back-icon.svg" alt="Иконка стрелки">
-              <span class="btn-text">
-                К списку статей
-              </span>
-            </a>
-
-            <div class="article__autor-block">
-              <h4 class="article__autor-name"></h4>
-
-              <span class="article__time">
-              </span>
-
-              <div class="article__user-box">
-
-                <figure class="topic__user">
-                  <img src="./img/icon-view.svg" alt="Иконка просмотра" class="topic__views-icon">
-                  <figcaption class="topic__views-text">0.6K</figcaption>
-                </figure>
-                <figure class="topic__user">
-                  <img src="./img/icon-chat.svg" alt="Иконка чата" class="topic__chat-icon">
-                  <figcaption class="topic__chat-text">0</figcaption>
-                </figure>
-
-              </div>
-
-            </div>
-
           </div>
 
         </div>
 
-        <aside class="adds-banners">
+        <aside class="adds-banners visually-hidden">
           <article class="adds-banners__turkey banner">
             <h4 class="adds-banners__title">
               Горящие туры в Стамбул
